# DealLens-oss-v2

./: .gitignore  pyproject.toml
app/: main.py
app/api/v1/: health.py
app/core/: config.py  lifespan.py
docs/: architecture.md  decisions.md  setup.md
